--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>React Bootstrap Todo List</title>
+  <title>React Employee Panel</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <div id="app"></div>
+  <script src="common.js"></script>
   <script src="bundle.js"></script>
 </body>
 </html>
